--- a/P02-VehiclesAPI/pricing-service/pom.xml
+++ b/P02-VehiclesAPI/pricing-service/pom.xml
@@ -42,7 +42,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+            <version>2.1.2.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>2.1.3.RELEASE</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
